Implementação de recebimento de pagamento

--- a/src/main/resources/templates/contas/contas-residencia.html
+++ b/src/main/resources/templates/contas/contas-residencia.html
@@ -39,7 +39,7 @@
                     <th><i class="icon-warning-sign"></i> Status</th>
                   </tr>
                   <tr th:each="conta : ${contas}">
-                    <th scope="row" th:text="${conta.id_contas}"></th>
+                    <th scope="row"></th>
                     <td th:text="${conta.residencia.casa}"></td>
                     <td th:text="${conta.residencia.morador.nome}"></td>
                     <td th:text="${conta.nome}"></td>
