--- a/src/main/resources/templates/fragments/layout-dashboard.html
+++ b/src/main/resources/templates/fragments/layout-dashboard.html
@@ -49,7 +49,7 @@
         </div>
 
         <!--logo start-->
-        <a th:href="@{/dashboard}" class="logo">Vila <span class="lite">Admin</span></a>
+        <a th:href="@{/}" class="logo">Vila <span class="lite">Admin</span></a>
         <!--logo end-->
 
         <div class="nav search-row" id="top_menu">
@@ -57,7 +57,7 @@
             <ul class="nav top-menu">
                 <li>
                     <form class="navbar-form">
-                        <input class="form-control" placeholder="Search" type="text">
+                        <input class="form-control" placeholder="Buscar" type="text">
                     </form>
                 </li>
             </ul>
@@ -80,7 +80,7 @@
                     <ul class="dropdown-menu extended logout">
                         <div class="log-arrow-up"></div>
                         <li>
-                            <a href="login.html"><i class="icon_key_alt"></i> Log Out</a>
+                            <a th:href="@{/logout}"><i class="icon_key_alt"></i> Logout</a>
                         </li>
                     </ul>
                 </li>
