--- a/src/main/resources/templates/contas/contas-residencia.html
+++ b/src/main/resources/templates/contas/contas-residencia.html
@@ -14,12 +14,12 @@
         <div class="row">
           <div class="col-lg-12">
             <h3 class="page-header"><i class="fa fa-table"></i> Relatório Individual de Contas por Residência</h3>
-            <ol class="breadcrumb">
+            <ol class="breadcrumb breadcrumb-botao">
               <li><i class="fa fa-home"></i><a th:href="@{/dashboard/residencias}">Dashboard</a></li>
               <li><i class="fa fa-table"></i>Contas</li>
               <li th:text="${residencia.casa}"><i class="fa fa-th-list"></i></li>
-              <a class="btn btn-primary barra-pdf" th:href="@{'/dashboard/contas/' + ${id_residencia} + '/pdf'}" target="_blank">Gerar PDF</a>
-              <a class="btn btn-primary barra-pdf" th:href="@{'/dashboard/contas/nova/' + ${residencia.id_residencia}}">Nova Conta</a>
+              <a class="btn btn-primary barra-pdf barra-pdf-btn" th:href="@{'/dashboard/contas/' + ${id_residencia} + '/pdf'}" target="_blank">Gerar PDF</a>
+              <a class="btn btn-primary barra-pdf barra-pdf-btn" th:href="@{'/dashboard/contas/nova/' + ${residencia.id_residencia}}">Nova Conta</a>
             </ol>
           </div>
         </div>
@@ -28,37 +28,39 @@
           <div class="col-lg-12">
             <section class="panel">
 
-              <table class="table table-striped table-advance table-hover">
-                <tbody>
-                  <tr>
-                    <th>#</th>
-                    <th><i class="icon_building"></i> Residência</th>
-                    <th><i class="icon-user"></i> Morador</th>
-                    <th><i class="icon_tasks"></i> Contas</th>
-                    <th><i class="icon_dollar"></i> Valor</th>
-                    <th><i class="icon_calendar"></i> Data</th>
-                    <th><i class="icon-warning-sign"></i> Status</th>
-                  </tr>
-                  <tr th:each="conta : ${contas}">
-                    <th scope="row"></th>
-                    <td th:text="${conta.residencia.casa}"></td>
-                    <td th:text="${conta.residencia.morador.nome}"></td>
-                    <td th:text="${conta.nome}"></td>
-                    <td th:text="|R$ ${{conta.valor}}|"></td>
-                    <td th:text="${{conta.pagamento}}"></td>
-                    <td th:attr="data-role=${conta.id_contas}">
-                      <span class="badge" th:text="${conta.status.descricao}"
-                            th:classappend="${(conta.pendente) ? 'bg-danger' :  'bg-success'}">
-                      </span>
-                    </td>
-                  </tr>
-                </tbody>
-              </table>
+              <div class="table-responsive">
+                <table class="table table-striped table-advance table-hover">
+                  <tbody>
+                    <tr>
+                      <th>#</th>
+                      <th><i class="icon_building"></i> Residência</th>
+                      <th><i class="icon-user"></i> Morador</th>
+                      <th><i class="icon_tasks"></i> Contas</th>
+                      <th><i class="icon_dollar"></i> Valor</th>
+                      <th><i class="icon_calendar"></i> Data</th>
+                      <th><i class="icon-warning-sign"></i> Status</th>
+                    </tr>
+                    <tr th:each="conta : ${contas}">
+                      <th scope="row"></th>
+                      <td th:text="${conta.residencia.casa}"></td>
+                      <td th:text="${conta.residencia.morador.nome}"></td>
+                      <td th:text="${conta.nome}"></td>
+                      <td th:text="|R$ ${{conta.valor}}|"></td>
+                      <td th:text="${{conta.pagamento}}"></td>
+                      <td th:attr="data-role=${conta.id_contas}">
+                        <span class="badge" th:text="${conta.status.descricao}"
+                              th:classappend="${(conta.pendente) ? 'bg-danger' :  'bg-success'}">
+                        </span>
+                      </td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
 
               <div class="margem">
                 <form class="navbar-form" th:action="@{'/dashboard/contas/filtro/' + ${residencia.id_residencia}}" method="GET">
                   Filtrar por ano   <input class="form-control" placeholder="Digite o ano" type="text" id="ano" name="ano" required>
-                  <button type="submit" class="btn btn-primary my-1">Filtrar</button>
+                  <button type="submit" class="btn btn-primary my-1 filtro-mobile">Filtrar</button>
                 </form>
               </div>
 
