Favicon e correções nos títulos

--- a/src/main/resources/templates/contas/contas-residencia.html
+++ b/src/main/resources/templates/contas/contas-residencia.html
@@ -4,7 +4,7 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{fragments/layout-dashboard}">
 
 <head>
-  <title>Contas</title>
+  <title>VilaAdmin - Individual</title>
 </head>
 
 <body>
