--- a/src/main/resources/templates/fragments/layout-dashboard.html
+++ b/src/main/resources/templates/fragments/layout-dashboard.html
@@ -6,9 +6,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="img/favicon.png">
+    <link rel="shortcut icon" th:href="@{/img/favicon.ico}" />
 
-    <title>Contas</title>
+    <title>VilaAdmin</title>
 
     <!-- Bootstrap CSS -->
     <link th:href="@{/css/bootstrap.min.css}" rel="stylesheet">
@@ -69,7 +69,7 @@
                 <li class="dropdown">
                     <a data-toggle="dropdown" class="dropdown-toggle" href="#">
                             <span class="profile-ava">
-                                <img alt="" src="img/avatar1_small.jpg">
+                                <img alt="" th:src="@{img/avatar1_small.jpg}">
                             </span>
                         <span class="username">Teodoro da Silva, 556</span>
                         <b class="caret"></b>
