--- a/src/main/resources/templates/contas/nova-conta.html
+++ b/src/main/resources/templates/contas/nova-conta.html
@@ -4,7 +4,7 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{fragments/layout-dashboard}">
 
 <head>
-  <title>Nova Conta</title>
+  <title>VilaAdmin - Nova Conta</title>
 </head>
 
 <body>
