--- a/src/main/resources/templates/home/index.html
+++ b/src/main/resources/templates/home/index.html
@@ -4,7 +4,7 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{fragments/layout-dashboard}">
 
 <head>
-  <title>Contas</title>
+  <title>VilaAdmin - Relatórios</title>
 </head>
 
 <body>
@@ -15,7 +15,7 @@
           <div class="col-lg-12">
             <h3 class="page-header"><i class="fa fa-table"></i> Relatório Individual de Contas</h3>
             <ol class="breadcrumb">
-              <li><i class="fa fa-home"></i><a href="index.html">Home</a></li>
+              <li><i class="fa fa-home"></i><a th:href="@{/}">Dashboard</a></li>
               <li><i class="fa fa-table"></i>Contas</li>
               <li><i class="fa fa-th-list"></i>Individual</li>
             </ol>
