--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -2,9 +2,10 @@
 <html xmlns:th="http://thymeleaf.org"
 	  xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
-	<title>Academic Web - Portal do Aluno</title>
+	<title>VilaAdmin - Login</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="shortcut icon" th:href="@{/img/favicon.ico}" />
 <!--===============================================================================================-->	
 	<link rel="icon" type="image/png" th:href="@{/img/icons/favicon.ico}"/>
 <!--===============================================================================================-->
