--- a/src/main/resources/templates/contas/nova-conta.html
+++ b/src/main/resources/templates/contas/nova-conta.html
@@ -14,7 +14,7 @@
         <div class="row">
           <div class="col-lg-12">
             <h3 class="page-header"><i class="fa fa-file-text-o"></i> Contas</h3>
-            <ol class="breadcrumb breadcrumb-geral">
+            <ol class="breadcrumb breadcrumb-nova">
               <li><i class="fa fa-home"></i><a th:href="@{/dashboard/residencias}">Dashboard</a></li>
                 <li><i class="fa fa-table"></i>Contas</li>
               <li th:text="${residencia.casa}"><i class="icon_document_alt"></i></li>
